// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  class="Drop-Target"
>
  <div>
    <p>
      Drag and drop your files here, or 
    </p>
    <form>
      <input
        class="hidden"
        id="file"
        multiple=""
        type="file"
      >
        
      </input>
      <label
        for="file"
      >
        click here.
      </label>
    </form>
  </div>
</div>
`;

exports[`should upload files from items when present 1`] = `
Array [
  Array [
    Array [
      "item",
    ],
  ],
]
`;

exports[`should upload froms from files when items not present 1`] = `
Array [
  Array [
    Array [
      "file",
    ],
  ],
]
`;
